# Copula

./: .gitignore  Avellaneda_Stoikov.ipynb  CDS.py  Confidence_Region.py  FICO.ipynb  README.md  Untitled.ipynb  calibration.py  confidence_region.ipynb  copulas.py  example_calibration.py  example_market_making.py  market_making.py  model_heston.py  pricing_model.py  pyproject.toml  strategie_option.py  testing_model.ipynb  tp_prog_finance.py  volatility_swaps.py
.ipynb_checkpoints/: pricing_model-checkpoint.py  testing_model-checkpoint.ipynb  var-checkpoint.py
Copula/: README.md
Tp_opti.ipynb/: Tp_snoussi.ipynb
copula/: Avellada_Stoikov.py  Avellaneda_Stoikov.ipynb  Confidence_Region.py  Untitled.ipynb  calibration.py  copulas.py  data_science.ipynb  example_calibration.py  model_heston.py  portfolio_hedger.py  pricing_model.py  sandbox_calibration.ipynb  strategie_option.py  tp_prog_finance.py  var.py  volatility_swaps.py
copula/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  calibration-checkpoint.py  pricing_model-checkpoint.py
