[project]
name = "copula"
version = "0.1.0"
description = ""
authors = [
    {name = "dahhou147",email = "dahou89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.3",
    "scipy",
    "matplotlib==3.7.1",
    "pandas==2.0.2",
    "yfinance==0.2.18"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/
'''
